# Sokoboards

./: README.md  bitboard.c  main.py  pyproject.toml  setup.py  sokoban_problem.cpp  sokoboard.c  sokoboard.cpp
boards/: board0  board1  board2  board3  board4
game/: game.py  sokoban.py  sokoban_lite.py
tests/: test_board.py  test_problem.py
trials/: genetic.py  randomfill.py
