[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sokoban"
version = "0.0.1"
description="Sokoban implementation for Python"
authors = [
    {name = "Matthew Taylor", email = "matthew.taylor.andre@gmail.com"},
]
urls = {Homepage = "https://github.com/MatthewAndreTaylor/Sokoboards"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
py-modules = []